# docx-validate

./: .gitignore  DEVELOPMENT_PLAN.md  Makefile  README.md  pyproject.toml
docs/plans/: 2026-04-09-dev-workflow-design.md  2026-04-09-dev-workflow.md  2026-04-09-docx-validation-bootstrap.md  2026-04-09-template-upload-design.md  2026-04-09-template-upload.md  DEVELOPMENT_PLAN.md
scripts/: dev.sh
src/docx_validate/: config.py  main.py
src/docx_validate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/docx_validate/api/: __init__.py  deps.py
src/docx_validate/api/routes/: health.py  rules.py  tasks.py  templates.py
src/docx_validate/db/: session.py
src/docx_validate/models/: __init__.py  rule_set.py  task.py  template.py
src/docx_validate/repositories/: __init__.py  rule_set_repository.py  task_repository.py  template_repository.py
src/docx_validate/schemas/: __init__.py  rule_set.py  task.py  template.py
src/docx_validate/services/: storage.py  task_service.py  template_metadata.py  template_service.py  validator.py
tests/: conftest.py  test_dev_workflow.py
tests/api/: test_health.py  test_rules.py  test_tasks.py  test_templates.py
tests/db/: test_task_model.py  test_template_model.py
tests/fixtures/templates/: basic-template.docx  no-placeholders.docx
tests/repositories/: test_template_repository.py
tests/services/: test_task_service.py  test_template_metadata.py
